tests/matrices/invalid/invalid_bad_value_3.mtx
%%MatrixMarket vector coordinate real general
4 3
1 101
2 ffsafdsafas
4 404
